examples/test/testpolicy12790.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12790
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key23: value8
      key16: value1
      key11: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value3
      podSelector:
        matchLabels:
          key34: value36
          key18: value10
